feat(index.html): delete form action attribute

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<form action="#">
+<form>
   <input type="text" name="search" id="search" placeholder="country">
   <button type="submit">search</button>
 </form>
